--- a/com.qunau.bandaoti/Explore.storyboard
+++ b/com.qunau.bandaoti/Explore.storyboard
@@ -5,10 +5,10 @@
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="9529"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Explore View Controller-->
         <scene sceneID="PLU-Bb-yZi">
             <objects>
-                <viewController id="I1W-1K-NXQ" sceneMemberID="viewController">
+                <viewController id="I1W-1K-NXQ" customClass="ExploreViewController" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="V6Z-1g-bGJ"/>
                         <viewControllerLayoutGuide type="bottom" id="SAe-PI-2dn"/>
